--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,4 +1,4 @@
 # Configuration for the CainBuilderPlugin
 
 # Specify the package where command classes are located
-command-package: zm.mc.plugin.command.excutor
+command-package: zm.mc.impl.command.excutor
