--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,3 +2,4 @@
 
 # Specify the package where command classes are located
 command-package: zm.mc.impl.command.excutor
+event-package: zm.mc.impl.event
